src/styles/global.css
@import url('https://rsms.me/inter/inter.css');
@import '~@fullcalendar/core/main.css';
@import '~@fullcalendar/daygrid/main.css';
@import '~@fullcalendar/timegrid/main.css';

:root {
  --accent: #0594a6;
  --accent-dark: #067988;
  --accent-darker: #075661;
  --text: #282828;
  --label: #6a6b6e;
  --surface: #efefef;
  --surface-hover: #ffffff;
  --divider: #eaeaea;
  --base: #fefefe;
  --base-low: #fefefe2a;
  --overflow: #fff;
  --backdrop: rgba(230, 230, 230, 0.75);
  --backdrop-trans: rgba(230, 230, 230, 0.25);

  --loading-overlay: #14141485;

  --star: #adadad;

  --gradiant-start-color: #0594a6;
  --gradiant-end-color: #0a7e8d;

  --gradiant-start-color-tans: rgb(23, 161, 129, 1);
  --gradiant-end-color-tans: #0a7e8d85;

  --gradiant: linear-gradient(180deg,
      var(--gradiant-start-color) 0%,
      var(--gradiant-end-color) 100%);

  --border-radius: 15px;
  --error: #a70450;

  --font: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
    Helvetica, Arial, sans-serif;

  --weight: 400;
  --weight-bold: 500;
  --weight-extrabold: 700;

  --shadow-small: 0 0 15px 0 rgba(0, 0, 0, 0.1);
  --shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
  --shadow-large: 0 8px 30px rgba(0, 0, 0, 0.1);

  --radius-small: 4px;
  --radius: 8px;
  --radius-large: 4px;

  --gap-small: 0.75rem;
  --gap: 1.5rem;
  --gap-large: 3rem;

  --transition: 200ms ease-in-out;
  --transition-colors: color 50ms ease-in-out,
    background-color var(--transition), border-color var(--transition);

  --safe-area-inset-top: env(safe-area-inset-top, 0.5vh);
  --safe-area-inset-bottom: env(safe-area-inset-bottom, 0.5vh);
  --safe-area-inset-right: env(safe-area-inset-right, 0.5vh);
  --safe-area-inset-left: env(safe-area-inset-left, 0.5vh);

  --bottom-bar-space: 72px;

  --top-bar-height: 72px;
  --bottom-bar-height: 72px;
}

/* @media only screen and (max-width: 380px) {
  :root {
    --border-radius: 10px;

    --gap-small: 0.5rem;
    --gap: 1.1rem;
    --gap-large: 2.2rem;
  }
} */

.dark {
  --accent: #19896f;
  --accent-low: #19896f2f;
  --accent-dark: #126451;
  --text: #eeeff1;
  --label: #8a8b8e;
  --backdrop: rgba(10, 10, 10, 0.75);
  --surface: #313236;
  --surface-hover: rgb(62, 62, 66);
  --divider: #2d2e31;
  --base: #1f2022;
  --base-low: #1f20222a;
  --overflow: #101015;
}

/* body::-webkit-scrollbar {
  width: 11px;
}

body {
  scrollbar-width: thin;
  scrollbar-color: var(--label) rgba(0, 0, 0, 0.0);
}

body::-webkit-scrollbar-track {
  background: rgba(0, 0, 0, 0.0);
}

body::-webkit-scrollbar-thumb {
  background-color: var(--label);
  border-radius: 6px;
  border: 3px solid rgba(0, 0, 0, 0.0);
} */

*,
*::before,
*::after {
  box-sizing: border-box;
}

html,
body {
  margin: 0;
  height: 100%;
  max-height: 100%;
}

body {
  color: var(--text);
  font-family: var(--font);
  font-weight: var(--weight);
  background: var(--base);
  transition: var(--transition-colors);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-tap-highlight-color: transparent;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
}

.button,
.fc-button {
  color: whitesmoke;
  font-family: var(--font);
  font-weight: var(--weight);
  background: var(--base);
  padding: 15px;
  border-radius: 15px;
  background: var(--accent);
  transition: var(--transition-colors);
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  -webkit-overflow-scrolling: touch;
  -webkit-tap-highlight-color: transparent;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  transition: all 0.3s;
  text-decoration: none;
  cursor: pointer;
  border: solid 1px var(--accent);
  outline: none;
}

.button:hover {
  background: var(--accent-dark);
}

.button:disabled,
.button[disabled] {
  border: 1px solid #999999;
  background-color: #cccccc;
  color: #666666;
}

input[type='text'],
input[type='email'],
input[type='password'],
input[type='search'],
textarea {
  border: 0px !important;
  color: var(--text);
  padding: var(--gap-small);
  background: var(--base);
  display: flex;
  align-items: center;
  transition: var(--transition-colors);
  border-color: var(--divider);
  border: 1px solid;
  border-radius: var(--border-radius);
  background-color: var(--surface);
  display: -ms-flexbox;
  /* IE10 */
  display: flex;
  font-size: inherit;
  line-height: 1;
  font-family: inherit;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
  -webkit-appearance: none;
  margin: 0px;
  /* padding: 16px 16px 16px 16px; */
  border-width: 0px;
  border-style: initial;
  border-color: initial;
  border-image: initial;
  outline: 0px;
}

input:focus,
select:focus,
textarea:focus {
  outline: none;
  outline: 0px;
  box-sizing: border-box;
  box-shadow: 0 0 0 2px var(--accent);
}

/* input:focus,
textarea:focus {
  outline: 0px;
  box-sizing: border-box;
  box-shadow: 0 0 0 2px var(--accent);
} */

input[type='search']::before {
  font-family: 'Inter';
  position: relative;
  left: -5px;
  content: ' \e9c1';
}

input:disabled {
  color: var(--accent-dark);
}

input[type='text']:hover,
input[type='password']:hover {
  background-color: var(--surface-hover);
}

input:-webkit-autofill {
  color: var(--text);
  font-family: inherit;
  -webkit-text-fill-color: var(--text);
  -webkit-text-size-adjust: 20px;
  -webkit-box-shadow: 0 0 0 50px var(--surface) inset;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
}

input:-webkit-autofill:focus {
  -webkit-box-shadow: 0 0 0 50px var(--surface-hover) inset;
  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
}

input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  -webkit-box-shadow: 0 0 0 30px var(--surface) inset !important;
  box-shadow: 0 0 0 30px var(--surface) inset !important;
}
/* ... */

